recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:7: error: not found: value n
	if(n==1){
           ^